<resources>
    <string name="app_name">New Quiz</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="total">Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_score">Save Score</string>
    <string name="retry">Retry</string>
    <string name="enter_you_name_please">Enter you name please:</string>
</resources>
